java/spring-ws-micrometer-k8s/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-ws-deployment
spec:
  selector:
    matchLabels:
      app: spring-ws-micrometer-k8s-app
  replicas: 2
  template:
    metadata:
      labels:
        app: spring-ws-micrometer-k8s-app
    spec:
      containers:
      - name: spring-ws-micrometer-k8s-app
        image: carysyd/spring-ws-micrometer-k8s
        ports:
        - containerPort: 8080
          name: rest-server
