java/spring-ws-micrometer-k8s/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /spring-ws-service
        backend:
          serviceName: spring-ws-service
          servicePort: 8080
